FIX: refactor social alignment style. (6)

--- a/source/css/_common/components/post/post-nav.styl
+++ b/source/css/_common/components/post/post-nav.styl
@@ -1,6 +1,6 @@
 .post-nav {
   display: table;
-  margin-top: 30px;
+  margin-top: 15px;
   width: 100%;
   border-top: 1px solid $gainsboro;
 }
